--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 collections:
   albums:
+    output: true
+
+  events:
     output: true
 
 
