--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
+# allows generation for future collection items (eg future events)
+future: true
 theme: minima
 plugins:
   - jekyll-feed
