remove redundant subfolders.

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -19,3 +19,4 @@ jobs:
         password: ${{ secrets.ONE_SSH_PASSWORD }}
         source: "/github/workspace/_site"
         target: "/www/testscp"
+        strip_components: 3
