--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -18,5 +18,5 @@ jobs:
         username: ${{ secrets.ONE_SSH_USER }}
         password: ${{ secrets.ONE_SSH_PASSWORD }}
         source: "/github/workspace/_site"
-        target: "/www/testscp"
+        target: "/www"
         strip_components: 3
