--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -12,11 +12,9 @@ jobs:
     - name: Run jekyll
       uses: docker://faph/action-jekyll:1.5
     - name: Copy to one.com
-      uses: appleboy/scp-action@master
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
-        host: ${{ secrets.ONE_SSH_HOST }}
-        username: ${{ secrets.ONE_SSH_USER }}
-        password: ${{ secrets.ONE_SSH_PASSWORD }}
-        source: "/github/workspace/_site"
-        target: "/www"
-        strip_components: 3
+        ftp-server: ${{ secrets.ONE_SFTP_HOST }}
+        ftp-username: ${{ secrets.ONE_SFTP_USER }}
+        ftp-password: ${{ secrets.ONE_SFTP_PASSWORD }}
+        local-dir: "/github/workspace/_site"
